--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -1446,6 +1446,7 @@ comments</property>
     <child>
       <widget class="GtkVBox" id="vbox10">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">4</property>
         <child>
           <widget class="GtkNotebook" id="notebook2">
@@ -1456,10 +1457,12 @@ comments</property>
               <widget class="GtkVBox" id="vbox124">
                 <property name="visible">True</property>
                 <property name="border_width">8</property>
+                <property name="orientation">vertical</property>
                 <property name="spacing">10</property>
                 <child>
                   <widget class="GtkVBox" id="vbox125">
                     <property name="visible">True</property>
+                    <property name="orientation">vertical</property>
                     <property name="spacing">6</property>
                     <child>
                       <widget class="GtkLabel" id="label180">
@@ -1585,6 +1588,7 @@ comments</property>
             <child>
               <widget class="GtkVBox" id="vbox142">
                 <property name="visible">True</property>
+                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkVBox" id="vbox143">
                     <property name="visible">True</property>
@@ -1593,18 +1597,10 @@ comments</property>
                     <child>
                       <widget class="GtkVBox" id="vbox144">
                         <property name="visible">True</property>
+                        <property name="orientation">vertical</property>
                         <property name="spacing">8</property>
                         <child>
-                          <widget class="GtkLabel" id="label529">
-                            <property name="visible">True</property>
-                            <property name="label" translatable="yes">&lt;b&gt;Database directory&lt;/b&gt;</property>
-                            <property name="use_markup">True</property>
-                          </widget>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">0</property>
-                          </packing>
+                          <placeholder/>
                         </child>
                         <child>
                           <widget class="GtkLabel" id="label_database">
@@ -1619,15 +1615,7 @@ comments</property>
                           </packing>
                         </child>
                         <child>
-                          <widget class="GtkLabel" id="label532">
-                            <property name="visible">True</property>
-                            <property name="label" translatable="yes">or</property>
-                          </widget>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">False</property>
-                            <property name="position">2</property>
-                          </packing>
+                          <placeholder/>
                         </child>
                         <child>
                           <widget class="GtkLabel" id="label_database_temp">
@@ -1689,6 +1677,7 @@ comments</property>
                 <child>
                   <widget class="GtkVBox" id="vbox145">
                     <property name="border_width">8</property>
+                    <property name="orientation">vertical</property>
                     <property name="spacing">10</property>
                     <child>
                       <widget class="GtkVBox" id="vbox146">
@@ -1748,6 +1737,7 @@ comments</property>
               <widget class="GtkVBox" id="vbox122">
                 <property name="visible">True</property>
                 <property name="border_width">7</property>
+                <property name="orientation">vertical</property>
                 <property name="spacing">6</property>
                 <child>
                   <widget class="GtkCheckButton" id="checkbutton_height">
@@ -1931,6 +1921,7 @@ comments</property>
               <widget class="GtkVBox" id="vbox123">
                 <property name="visible">True</property>
                 <property name="border_width">8</property>
+                <property name="orientation">vertical</property>
                 <property name="spacing">6</property>
                 <child>
                   <widget class="GtkHBox" id="hbox87">
@@ -7404,7 +7395,7 @@ suitable for agility tests)</property>
             <child>
               <widget class="GtkMenuItem" id="menu_other">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_Other</property>
+                <property name="label" translatable="yes">_Other tests</property>
                 <property name="use_underline">True</property>
                 <child>
                   <widget class="GtkMenu" id="menu_other_menu">
@@ -7463,9 +7454,9 @@ suitable for agility tests)</property>
               </widget>
             </child>
             <child>
-              <widget class="GtkMenuItem" id="menu_view">
+              <widget class="GtkMenuItem" id="menu_windows">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">_View</property>
+                <property name="label" translatable="yes">_Windows</property>
                 <property name="use_underline">True</property>
                 <child>
                   <widget class="GtkMenu" id="menu_view_menu">
@@ -7661,8 +7652,8 @@ suitable for agility tests)</property>
                                         <property name="receives_default">False</property>
                                         <property name="tooltip" translatable="yes">Edit selected person (E)</property>
                                         <signal name="clicked" handler="on_edit_current_person_clicked"/>
-                                        <accelerator key="e" signal="clicked" modifiers="GDK_SHIFT_MASK"/>
                                         <accelerator key="E" signal="clicked"/>
+                                        <accelerator key="e" signal="clicked" modifiers="GDK_SHIFT_MASK"/>
                                         <child>
                                           <widget class="GtkImage" id="image1977">
                                             <property name="visible">True</property>
