deleted/fixed links to old web site

--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -7652,8 +7652,8 @@ suitable for agility tests)</property>
                                         <property name="receives_default">False</property>
                                         <property name="tooltip" translatable="yes">Edit selected person (E)</property>
                                         <signal name="clicked" handler="on_edit_current_person_clicked"/>
-                                        <accelerator key="E" signal="clicked"/>
                                         <accelerator key="e" signal="clicked" modifiers="GDK_SHIFT_MASK"/>
+                                        <accelerator key="E" signal="clicked"/>
                                         <child>
                                           <widget class="GtkImage" id="image1977">
                                             <property name="visible">True</property>
@@ -10770,10 +10770,12 @@ suitable for agility tests)</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox3">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">2</property>
         <child>
           <widget class="GtkVBox" id="vbox71">
             <property name="visible">True</property>
+            <property name="orientation">vertical</property>
             <property name="spacing">10</property>
             <child>
               <widget class="GtkLabel" id="label205">
@@ -10863,6 +10865,7 @@ suitable for agility tests)</property>
                     <child>
                       <widget class="GtkVBox" id="vbox121">
                         <property name="visible">True</property>
+                        <property name="orientation">vertical</property>
                         <property name="spacing">8</property>
                         <child>
                           <widget class="GtkHBox" id="hbox268">
@@ -10910,39 +10913,6 @@ suitable for agility tests)</property>
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                             <property name="position">1</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <widget class="GtkHBox" id="hbox269">
-                            <property name="visible">True</property>
-                            <property name="spacing">8</property>
-                            <child>
-                              <widget class="GtkLabel" id="label510">
-                                <property name="visible">True</property>
-                                <property name="label" translatable="yes">See also:</property>
-                                <property name="use_markup">True</property>
-                              </widget>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">0</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <widget class="GtkLabel" id="label511">
-                                <property name="visible">True</property>
-                                <property name="label">&lt;i&gt;http://projects.gnome.org/chronojump/problems.html&lt;/i&gt;</property>
-                                <property name="use_markup">True</property>
-                              </widget>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">1</property>
-                              </packing>
-                            </child>
-                          </widget>
-                          <packing>
-                            <property name="position">2</property>
                           </packing>
                         </child>
                       </widget>
