--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -7518,8 +7518,8 @@ suitable for agility tests)</property>
                                         <property name="receives_default">False</property>
                                         <property name="tooltip" translatable="yes">Edit selected person (E)</property>
                                         <signal name="clicked" handler="on_edit_current_person_clicked"/>
-                                        <accelerator key="e" signal="clicked" modifiers="GDK_SHIFT_MASK"/>
                                         <accelerator key="E" signal="clicked"/>
+                                        <accelerator key="e" signal="clicked" modifiers="GDK_SHIFT_MASK"/>
                                         <child>
                                           <widget class="GtkImage" id="image1977">
                                             <property name="visible">True</property>
@@ -17407,6 +17407,7 @@ comments</property>
     <child>
       <widget class="GtkVBox" id="vbox147">
         <property name="visible">True</property>
+        <property name="orientation">vertical</property>
         <property name="spacing">8</property>
         <child>
           <widget class="GtkScrolledWindow" id="scrolledwindow36">
@@ -17722,6 +17723,7 @@ times</property>
             <child>
               <widget class="GtkVBox" id="vbox150">
                 <property name="visible">True</property>
+                <property name="orientation">vertical</property>
                 <child>
                   <widget class="GtkLabel" id="label_uploaded_sports">
                     <property name="visible">True</property>
@@ -17752,7 +17754,7 @@ times</property>
             <child>
               <widget class="GtkLabel" id="label_thanks">
                 <property name="visible">True</property>
-                <property name="label" translatable="yes">&lt;i&gt;Thanks for your time.&lt;/i&gt;</property>
+                <property name="label" translatable="yes">Thanks for your time.  Graphs will be updated on server at 3h7min UTC.</property>
                 <property name="use_markup">True</property>
               </widget>
               <packing>
@@ -20421,18 +20423,6 @@ by you</property>
               </packing>
             </child>
             <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
-              <placeholder/>
-            </child>
-            <child>
               <widget class="GtkButton" id="button_connect_cp2">
                 <property name="label" translatable="yes">Connect</property>
                 <property name="visible">True</property>
@@ -20476,6 +20466,18 @@ by you</property>
                 <property name="top_attach">4</property>
                 <property name="bottom_attach">5</property>
               </packing>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
             </child>
           </widget>
           <packing>
